# alaltalk-app

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  alaltalk_RDS.txt  crawl.py  crawl_2.py  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt  test.sh
.ebextensions/: django.config
.github/workflows/: ci.yml
accounts/: admin.py  apps.py  backends.py  forms.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
accounts/services/: accounts_service.py
accounts/tests/: test_accounts_service.py  test_accounts_views.py
alaltalk/: __init__.py  asgi.py  cache_key.py  celery.py  enviorment.py  settings.py  urls.py  views.py  wsgi.py
alaltalk/settings/: base.py  dev.py  prod.py
app/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
app/chat/: apps.py  consumers.py  models.py  urls.py
app/search/: __init__.py  apps.py  crawl.py  crawl_2.py  functions.py  models.py
apps/: base_model.py  pagination.py
apps/account/: constants.py  models.py  tasks.py  urls.py  utils.py
apps/chat/: consumers.py  models.py  routing.py  urls.py  views.py
apps/friend/: apps.py  constants.py  helpers.py  models.py  urls.py
apps/search/: crawl.py  models.py
chat/: consumers.py  models.py  routing.py  urls.py  views.py
chat/services/: chat_service.py
search/: __init__.py  apps.py  functions.py  models.py  test.html
search/service/: like_cancel_service.py  like_service.py  search_service.py
search/tests/: test_like_service.py  test_search_service.py
static/css/: base.css
static/js/: base.js
templates/: base.html
templates/account/: mypage.html  signup.html  user_list.html  verification_email.html
templates/accounts/: freind_like.html  login.html  mypage.html  signin.html  signup.html  user_list.html
templates/chat/: chat_list.html  chat_room.html  freind_like.html
templates/landing/: landing_page.html
templates/search/: recommend.html  recommend_include.html  (+4 more)
tests/: conftest.py  helpers.py  settings.py
(+93 files in other folders)
