[tool.poetry]
name = "alaltalk"
version = "0.1.0"
description = "A messenger with contents recommendation algorithm applied."
authors = ["sahayana <saokhueyang@gmail.com:>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.2"
django-ninja = "^0.17.0"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
django-stubs = "^1.9.0"
django-allauth = "^0.49.0"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.9
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "alaltalk.settings"

[tool.isort]
profile = "black"

[tool.black]
line-length = 180