[tool.poetry]
name = "alaltalk"
version = "0.1.0"
description = "A messenger with contents recommendation algorithm applied."
authors = ["sahayana <saokhueyang@gmail.com:>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0.2"
django-ninja = "^0.17.0"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
django-stubs = "^1.9.0"
Pillow = "^9.0.1"
PyMySQL = "1.0.2"
types-PyMySQL = "1.0.6"
bs4 = "^0.0.1"
requests = "^2.27.1"
selenium = "^4.1.3"
mysqlclient = "^2.1.0"
channels = "^3.0.4"
channels-redis = "^3.4.0"
django-storages = "^1.12.3"
boto3 = "^1.21.25"
pytest = "^7.1.1"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.8
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "alaltalk.settings"

[tool.isort]
profile = "black"

[tool.black]
line-length = 180